@@ -1,5 +1,6 @@
 @comment $NetBSD$
 etc/voicevox_core/models.json
+etc/voicevox_core/main.json
 share/voicevox_core/additional_libraries/libcublas.so.12
 share/voicevox_core/additional_libraries/libcublasLt.so.12
 share/voicevox_core/additional_libraries/libcudart.so.12
