@@ -1,0 +1,5 @@
+{
+  "9f3ee141-26ad-437e-97bd-d22298d02ad2": "もち子(cv 明日葉よもぎ)",
+  "0ebe2c7d-96f3-4f0e-a2e3-ae13fe27c403": "Voidoll(CV:丹下桜)",
+  "462cd6b4-c088-42b0-b357-3816e24f112e": "ユーレイちゃん(CV:神崎零)"
+}
