@@ -1,0 +1,5 @@
+{
+  "388f246b-8c41-4ac1-8e2d-5d79f3ff56d9": "<p>ずんだもん は ＳＳＳ合同会社 の登録商標または商標です。</p>",
+  "4f51116a-d9ee-4516-925d-21f183e2afad": "<a href=\"https://virvoxproject.wixsite.com/official/voicevox%E3%81%AE%E5%88%A9%E7%94%A8%E8%A6%8F%E7%B4%84\">利用許諾</a>",
+  "9f3ee141-26ad-437e-97bd-d22298d02ad2": "<a href=\"https://vtubermochio.wixsite.com/mochizora/%E5%88%A9%E7%94%A8%E8%A6%8F%E7%B4%84\">利用規約と禁止事項</a>"
+}
